debug js and add style to webpage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="jumbotron">
+          <div class="jumbotron bg-warning text-center">
             <h2>Pig Latin Translator (aka "<em>igPay atinLay anslatorTray</em>")</h2>
           </div>
         </div>
@@ -23,22 +23,27 @@
               <!-- <div class="card-header">Header</div> -->
               <div class="card-body">
                 <div class="form-group row">
-                  <label for="user-input" class="col-lg-3 col-form-label">Enter "ouryay Englishyay"</label>
-                  <div class="col-lg-9">
+                  <label for="user-input" class="col-lg-2 col-form-label"><h3>Input:</h3></label>
+                  <div class="col-lg-10">
                     <input type="text" class="form-control" id="user-input">
                   </div>
                 </div>
               </div>
             </div>
-            <button type="submit" class="btn btn-warning btn-lg">Submit!</button>
+            <button type="submit" class="btn btn-warning btn-lg btn-block">Anslatetray (<em>Translate</em>)</button>
           </form>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <p id="igpay">
-            <!-- This is where the result will show up -->
-          </p>
+          <div class="card text-white bg-info mb-3" id="ardcay">
+            <!-- <div class="card-header">Header</div> -->
+            <div class="card-body">
+              <h3 class="text-center" id="igpay">
+                <!-- This is where the result will show up -->
+              </h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
